--- a/app/views/shared/layouts/_header.html.erb
+++ b/app/views/shared/layouts/_header.html.erb
@@ -5,16 +5,16 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
-    <title>Admin Console - UsersDelight</title>
+    <title>Admin Console - MyCampaign</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <meta name="Keywords" content="engagement tools, growth hacking, usersdelight, navigation bar, feedback tool, coupon popup" />
-    <meta name="Description" content="Grow Traffic &amp; Engagement on Website &amp; Mobile Apps using UsersDelight" />
+    <meta name="Keywords" content="engagement tools, growth hacking, MyCampaign, navigation bar, feedback tool, coupon popup" />
+    <meta name="Description" content="Grow Traffic &amp; Engagement on Website &amp; Mobile Apps using MyCampaign" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" />
-    <meta property="og:title" content="Admin Console - UsersDelight" />    
+    <meta property="og:title" content="Admin Console - MyCampaign" />    
     <meta property="og:type" content="website" />      
-    <meta property="og:site_name" content="UsersDelight"/>
+    <meta property="og:site_name" content="MyCampaign"/>
     <meta property="fb:app_id" content="303415479798737"/>
-    <meta property="og:description" content="Grow Traffic &amp; Engagement on Website &amp; Mobile Apps using UsersDelight"/>
+    <meta property="og:description" content="Grow Traffic &amp; Engagement on Website &amp; Mobile Apps using MyCampaign"/>
     <link href='/stylesheets/main_new.css?v=5.8' rel='stylesheet' type='text/css' />   
     <script type="text/javascript" src="/javascripts/jquery.min.js?v=3.0"></script>
     <script data-turbolinks-track="true" src="/javascripts/application.js"></script>
@@ -22,9 +22,6 @@
     <link rel="apple-touch-icon-precomposed" href="https://www.socialappshq.com/apple-touch-icon-precomposed.png" />
 
     <link href="/stylesheets/new_responsive.css?v=0.2" rel="stylesheet" type="text/css" media="all"/>
-    <script>
-        alert('Signed in successfully.');
-    </script>
   </head>
 
   <body>
@@ -35,18 +32,18 @@
         <div class="container">
           <!--start top header-->
           <div class="top-header">
-            <div class="row"> <a class="AlignLeft" href="#"><img src="/images/usersdelight.png"/></a>
+            <div class="row"> <a class="AlignLeft" href="#">MyCampaign</a>
               <div class="AlignRight top-header-navigation">
                 <ul id="nav">                  
                   <li><a>Settings</a>
                     <ul>
-                      <li><a href="/member/billing/index">Subscription Details</a></li>
+                      <!--<li><a href="/member/billing/index">Subscription Details</a></li>
                       <li><a href="/member/billing/billing">Update Billing Information</a></li>
-                      <li><a href="/member/billing/plan">Update Plan</a></li>
+                      <li><a href="/member/billing/plan">Update Plan</a></li>-->
                       <li><a href="/users/edit">Change your password</a></li>
                     </ul>
                   </li>
-                  <li><a href="/home/pricing">Pricing</a></li>
+                  <!--<li><a href="/home/pricing">Pricing</a></li>-->
                   <li><a class="navbar-link" data-method="delete" href="/users/sign_out" rel="nofollow">Logout</a></li>
                 </ul>
                 
