--- a/app/views/layouts/_application.html.erb
+++ b/app/views/layouts/_application.html.erb
@@ -5,7 +5,7 @@
   <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-      <% title_tag = 'Apps to Engage and Grow your User base by UsersDelight'
+      <% title_tag = 'Apps to Engage and Grow your User base by MyCampaigns'
       meta_desc = 'All Apps to Engage and Grow your User base across Website, Mobile Apps and Twitter'
       meta_key = 'Feedback, Notification and  Coupons'
 
@@ -26,10 +26,10 @@
       <meta property="og:title" content="<%=title_tag%>" />
       <meta property="og:type" content="website" />
       <meta property="og:description" content="<%=meta_desc%>"/>
-      <script type="text/javascript" src="/javascripts/jquery.min.js?v=2.4"></script>
-      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-      <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-      <%= stylesheet_link_tag    'home', media: 'all', 'data-turbolinks-track' => true %>
+     <!-- <script type="text/javascript" src="/javascripts/jquery.min.js?v=2.4"></script>-->
+      <%= stylesheet_link_tag    'application', media: 'all'%>
+      <%= javascript_include_tag 'application' %>
+      <%= stylesheet_link_tag    'home', media: 'all' %>
       <%= csrf_meta_tags %>
 
     <body class= "apps">
