--- a/app/views/member/campaigns/web/_edit.html.erb
+++ b/app/views/member/campaigns/web/_edit.html.erb
@@ -37,7 +37,7 @@
 
       <div class="create-campaign-left-row">
         <label style="width:20% !important;">Select Type of Campaign</label>
-        <select id="select_type" name="campaign[model_name]">
+        <select id="select_type" name="campaign[campaign_model_name]">
         <option value="WebFeedback">Feedback</option>
           <option value="WebNotification">Notification</option>
           <option value="WebCoupon">Coupon</option>
