--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-      <% title_tag = 'Apps to Engage and Grow your User base by UsersDelight'
+      <% title_tag = 'Apps to Engage and Grow your User base by Mycampaigns'
       meta_desc = 'All Apps to Engage and Grow your User base across Website, Mobile Apps and Twitter'
       meta_key = 'Feedback, Notification and  Coupons'
     %>
@@ -19,8 +19,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="<%=meta_desc%>"/>
 <script type="text/javascript" src="/javascripts/jquery.min.js?v=2.4"></script>
-<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<%= stylesheet_link_tag    'application', media: 'all' %>
+<%#= javascript_include_tag 'application'%>
 <%#= stylesheet_link_tag    'home', media: 'all', 'data-turbolinks-track' => true %>
 <!-- NEED TO BE VERIFIED, WHETHER IT WILL REMAIN OR NOT. IN CASE YES DOWNLOAD THIS TO OUR SITE. COMMENT WRITTEN BY ADITYA SRIVASTAVA-->
 <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css"/>
@@ -118,14 +118,7 @@
           }
         }
 
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-51018669-1', 'usersdelight.com');
-        ga('send', 'pageview');
-
+        
       </script>
     </body>
   </html>
