view source code bug fixed

--- a/app/views/member/campaigns/web/_app.html.erb
+++ b/app/views/member/campaigns/web/_app.html.erb
@@ -48,7 +48,7 @@
           <div class="row">
             <li id="web_name_<%=i%>" class="name"><%=web.name%></li>
             <li class="domain"><%=web.domain%></li>
-            <li><a id="view_js_btn" onclick="view_js_code('<%=web.name%>','<%=web.key%>',<%=web.id%>);return false;">view source code</a></li>
+            <li><a id="view_js_btn" onclick="view_js_code('<%=web.name%>','<%=web.key%>','<%=web.id%>');return false;">view source code</a></li>
           </div>
           <%  i+=1
         }
