--- a/app/views/member/campaigns/web/_app.html.erb
+++ b/app/views/member/campaigns/web/_app.html.erb
@@ -93,7 +93,7 @@
 
 <script>
   function view_js_code(_web_name,_key_value,id){
-    jQuery('.custom_source_code').html('<textarea readonly="readonly" rows="4" cols="10" style="font-size:12px;width: 79% !important;">&lt;script type="text/javascript"&gt;var custom_tag = {};var _key=_key||{};_key["_key"]="'+_key_value+'";_key["_id"]='+id+';(function() {var _st= document.createElement("script");_st.setAttribute("type", "text/javascript");_st.setAttribute("src", "lvh.me:3002/ud.js");document.getElementsByTagName("body")[0].appendChild(_st);})();&lt;/script&gt;&lt;noscript&gt;Engage using &lt;a href="http://www.usresdelight.com/"&gt;lvh.me:3002&lt;/a&gt; apps&lt;/noscript&gt;</textarea>');
+    jQuery('.custom_source_code').html('<textarea readonly="readonly" rows="4" cols="10" style="font-size:12px;width: 79% !important;">&lt;script type="text/javascript"&gt;var custom_tag = {};var _key=_key||{};_key["_key"]="'+_key_value+'";_key["_id"]='+id+';(function() {var _st= document.createElement("script");_st.setAttribute("type", "text/javascript");_st.setAttribute("src", "http://mycampaigns.herokuapp.com/ud.js");document.getElementsByTagName("body")[0].appendChild(_st);})();&lt;/script&gt;&lt;noscript&gt;Engage using &lt;a href="http://mycampaigns.herokuapp.com/"&gt;http://mycampaigns.herokuapp.com&lt;/a&gt; apps&lt;/noscript&gt;</textarea>');
     jQuery('.custom_source_code').css({'display':'block'});
     jQuery('#custom_js_head').html('Source Code for '+_web_name);
     jQuery('#custom_js_head').css({'display':'block'});
