feed back edit form js error fixed

--- a/app/views/member/setup/web/feedback/_edit.html.erb
+++ b/app/views/member/setup/web/feedback/_edit.html.erb
@@ -1020,7 +1020,7 @@
     $('._tab_text').css({'text-shadow':'none'}); // not checked
   });
 
-  $("#tab_text, #form_title").maxlength();
+  //$("#tab_text, #form_title").maxlength();
 
   //Allow only AplhaNumeric Values
   $('#text_color,#background_color,#border_color,#form_text_color,#form_background_color,#form_border_color,#title_text_color,#title_background_color,#action_background_color,#action_text_color').keydown(function (e) {
