--- a/app/views/member/setup/web/feedback/_edit.html.erb
+++ b/app/views/member/setup/web/feedback/_edit.html.erb
@@ -215,11 +215,11 @@
             </div>
 
             <div class="create-campaign-left-row">
-              <label>Allow "UsersDelight" logo</label>
+              <label>Allow "MyCampaign" logo</label>
               <input type="checkbox" name="campaign[show_credits]" value="1" onclick="return false" <%if @campaign.show_credits==1%>checked<%end%>/><label class="btn_label">Yes</label><br/>
-              <small class="create-ex create_campaign_note">
-                Only paid users can hide UsersDelight logo.
-              </small>
+              <!--<small class="create-ex create_campaign_note">
+                Only paid users can hide MyCampaign logo.
+              </small>-->
             </div>
           </div>
         </div>
@@ -273,7 +273,7 @@
     </div>
     <div class="feedback_form" style="width: 46%;height: auto;float: left;">
       <div class="_tab">
-        <p class="_tab_text"></p>
+        <p class="_tab_text">Feedback</p>
       </div>
       <div class="f_form">
         <div class="f_title"></div>
