--- a/app/views/shared/layouts/_header.html.erb
+++ b/app/views/shared/layouts/_header.html.erb
@@ -18,6 +18,8 @@
     <link href='/stylesheets/main_new.css?v=5.8' rel='stylesheet' type='text/css' />   
     <script type="text/javascript" src="/javascripts/jquery.min.js?v=3.0"></script>
     <script data-turbolinks-track="true" src="/javascripts/application.js"></script>
+    <script type="text/javascript" src="/javascripts/fingerprint.js"></script>
+    <script type="text/javascript" src="/javascripts/analytics.js"></script>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon-precomposed" href="https://www.socialappshq.com/apple-touch-icon-precomposed.png" />
 
