--- a/app/views/member/setup/web/_user_filter.html.erb
+++ b/app/views/member/setup/web/_user_filter.html.erb
@@ -10,7 +10,8 @@
   .input_method_schemes {float: left;width: 40%;margin: 6px 0 0  3px;}
   .buttons {margin: 14px 5px 0 0;float:right;}
   .add_btn {border: 0px solid;background: #3f6eba;color: white;padding: 4px 9px;border-radius: 18px;text-decoration: none;}
-  .remove_btn {border: 0px solid;background: #3f6eba;color: white;padding: 0px 7px;border-radius: 18px;text-decoration: none;}
+  .remove_btn {border: 0px solid;background: #3f6eba;color: white;padding: %>
+0px 7px;border-radius: 18px;text-decoration: none;}
   .custom-filters-li {float:left;}
   .add-more {float: left;margin: 9px 0 10px 7px;}
 </style>
